# pyjoy

./: CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build-test.yml
docs/: joy-manual.md  pyjoy.md  rationale-for-joy.md  tutorial.md
src/pyjoy/: __init__.py  __main__.py  errors.py  evaluator.py  parser.py  repl.py  scanner.py  stack.py  types.py
src/pyjoy/backends/c/: builder.py  converter.py  emitter.py  preprocessor.py
src/pyjoy/backends/c/runtime/: joy_primitives.c  joy_runtime.c  joy_runtime.h
src/pyjoy/evaluator/: __init__.py  aggregate.py  arithmetic.py  combinators.py  core.py  io.py  logic.py  stack_ops.py  system.py  types.py
tests/: conftest.py  test_c_backend.py  test_combinators.py  test_dual_mode.py  test_evaluator.py  test_io.py  test_parser.py  test_primitive_adapters.py  test_primitives.py  test_python_interop.py  test_pythonic_mode.py  test_recursion.py  test_scanner.py  test_stack.py  test_stdlib.py  test_types.py
tests/joy/: CMakeLists.txt  finclude.joy  fopen.joy  fput.joy  fputch.joy  fputchars.joy  fputstring.joy  fremove.joy  frename.joy  fwrite.joy  helpdetail.joy  strftime.joy
