[project]
name = "pyjoy-lang"
version = "0.1.2"
description = "A Python implementation of the Joy programming language with C code generation"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
maintainers = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = [
    "joy",
    "concatenative",
    "stack-based",
    "functional",
    "programming-language",
    "interpreter",
    "compiler",
    "c-code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shakfu/pyjoy-lang"
Documentation = "https://github.com/shakfu/pyjoy-lang#readme"
Repository = "https://github.com/shakfu/pyjoy-lang.git"
Issues = "https://github.com/shakfu/pyjoy-lang/issues"
Changelog = "https://github.com/shakfu/pyjoy-lang/blob/main/CHANGELOG.md"

[project.scripts]
pyjoy = "pyjoy.__main__:main"

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyjoy"
module-root = "src"
source-include = ["CHANGELOG.md", "tests/**"]


[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "twine>=6.2.0",
    "ty>=0.0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# primitives.py has long description strings in data dictionaries
"src/pyjoy/primitives.py" = ["E501"]
